[package]
name = "httpstun_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
argon2 = { version = "0.5.3", features = ["std"] }
async-channel = "2.5.0"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
etherparse = "0.19.0"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.28"
nix = { version = "0.30.1", features = ["process"] }
rpassword = "7.4.0"
serde = { version = "1.0.226", features = ["derive"] }
signal-handler = "0.2.2"
signal-hook = "0.3.18"
tappers = { version = "0.4.2", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
